[gd_scene load_steps=9 format=3 uid="uid://cmoc1kw7465h"]

[ext_resource type="PackedScene" uid="uid://bf3k02fdggn06" path="res://Objects/Door/door.tscn" id="1_8bp6b"]
[ext_resource type="Script" uid="uid://b2o1tps8usbfv" path="res://Objects/Door/BatteryDoor/battery_door.gd" id="2_fxuw7"]
[ext_resource type="PackedScene" uid="uid://b7qfrcuaghpqn" path="res://Components/InteractionArea/InventoryRequirementInteractionArea/inventory_requirement_interaction_area.tscn" id="3_6megg"]
[ext_resource type="Script" uid="uid://dvclds4rayld8" path="res://Resources/inventory_requirement.gd" id="4_0wca0"]
[ext_resource type="Script" uid="uid://bviplh42sb2sb" path="res://Resources/item_data.gd" id="4_2ktl7"]
[ext_resource type="PackedScene" uid="uid://xnd8ne8fypg3" path="res://Components/FloatAwayTextSpawner/float_away_text_spawner.tscn" id="5_tsdtq"]

[sub_resource type="Resource" id="Resource_umch8"]
script = ExtResource("4_0wca0")
batteries_cost = 1
steel_cost = 0
costs_items = Array[ExtResource("4_2ktl7")]([])
requires_items = Array[ExtResource("4_2ktl7")]([])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_edl3n"]
size = Vector2(112, 64)

[node name="BatteryDoor" instance=ExtResource("1_8bp6b")]
script = ExtResource("2_fxuw7")

[node name="InventoryRequirementInteractionArea" parent="." index="2" instance=ExtResource("3_6megg")]
position = Vector2(8, 32)
inventory_requirement = SubResource("Resource_umch8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InventoryRequirementInteractionArea" index="0"]
shape = SubResource("RectangleShape2D_edl3n")

[node name="FloatAwayTextSpawner" parent="." index="3" instance=ExtResource("5_tsdtq")]
position = Vector2(32, 16)
text = "Requires Battery"

[connection signal="insufficient_requirements" from="InventoryRequirementInteractionArea" to="." method="_on_inventory_requirement_interaction_area_insufficient_requirements"]
[connection signal="requirements_met" from="InventoryRequirementInteractionArea" to="." method="_on_inventory_requirement_interaction_area_requirements_met"]
